deploy/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brightbean-app
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - port: 80
      targetPort: 8000
      name: http
