deploy/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app.kubernetes.io/component: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
